--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,9 @@ dependencies {
 
     //analitics
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+
+    //for image
+    implementation 'io.github.sangcomz:fishbun:1.0.0-beta01'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 }
